# LibAVQt

./: .gitignore  .gitignore_BACKUP_2704  .gitignore_REMOTE_2704  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LibAVQt.qdocconf  Player.pro  README.md  main.cpp
AV/: CMakeLists.txt  DecoderVAAPI.cpp  DecoderVAAPI.h  EncoderVAAPI.cpp  EncoderVAAPI.h  FrameSaver.cpp  FrameSaver.h  IFrameSink.h  IFrameSource.h
AV/input/: DecoderVAAPI.cpp  DecoderVAAPI.h  IFrameSource.h
AV/input/private/: DecoderVAAPI_p.h
AV/output/: EncoderVAAPI.cpp  EncoderVAAPI.h  FrameSaver.cpp  FrameSaver.h  IFrameSink.h  OpenGLWidgetRenderer.cpp  OpenGLWidgetRenderer.h
AV/output/private/: EncoderVAAPI_p.h  FrameSaver_p.h  OpenGLWidgetRenderer_p.h
AVQt/: AVQt  AVQt.h  AVQt.pc.in  AVQt.pro  AVQtShader.qrc  CMakeLists.txt  LibAVQt.pro  frame.yuv  global.cpp  global.h  global.hpp  mainpage.dox  resources.qrc  texture.fsh  texture.vsh  textureDRM.fsh  textureDRM.vsh  textureES.fsh  textureES.vsh  textureNV12.fsh  textureP010.fsh
AVQt/cmake/: Config.cmake.in
AVQt/communication/: Command.cpp  Command.h  CommandPadParams.h  FilePadParams.cpp  FilePadParams.hpp  IBitstreamProcessor.hpp  IOutput.hpp  IProcessor.hpp  Message.cpp  Message.h  PacketPadParams.cpp  PacketPadParams.h
AVQt/decoder/: AudioDecoder.cpp  DecoderD3D11VA.h  DecoderDXVA2.cpp  DecoderMMAL.cpp  DecoderMMAL.h  DecoderQSV.h  DecoderVAAPI.cpp  DecoderVAAPI.h  IDecoder.h  IDecoderOld.h
AVQt/decoder.old/: AudioDecoder.cpp  AudioDecoder.h  DecoderD3D11VA.cpp  DecoderD3D11VA.h  DecoderDXVA2.cpp  DecoderDXVA2.h  DecoderMMAL.cpp  DecoderMMAL.h  DecoderQSV.cpp  DecoderQSV.h  DecoderVAAPI.cpp  DecoderVAAPI.h  IDecoder.h
AVQt/decoder.old/private/: AudioDecoder_p.h  DecoderD3D11VA_p.h  DecoderDXVA2_p.h  DecoderMMAL_p.h  DecoderQSV_p.h  DecoderVAAPI_p.h
AVQt/decoder/private/: DecoderD3D11VA_p.h  DecoderQSV_p.h  DecoderVAAPI_p.h
AVQt/encoder/: EncoderQSV.cpp  EncoderQSV.h  EncoderVAAPI.cpp  EncoderVAAPI.h  IEncoder.h
AVQt/encoder/private/: EncoderQSV_p.h
AVQt/filter/: AudioDecoder.cpp  AudioDecoder.h  DecoderD3D11VA.cpp  DecoderD3D11VA.h  DecoderDXVA2.cpp  DecoderDXVA2.cpp.orig  DecoderDXVA2.h  DecoderMMAL.cpp  DecoderMMAL.cpp.orig  DecoderMMAL.h  DecoderQSV.cpp  DecoderQSV.cpp.orig  DecoderQSV.h  DecoderVAAPI.cpp  DecoderVAAPI.cpp.orig  DecoderVAAPI.h  EncoderQSV.cpp  EncoderQSV.h  EncoderVAAPI.cpp  EncoderVAAPI.h  IDecoder.h  IEncoder.h
AVQt/filter/private/: AudioDecoder_p.h  DecoderD3D11VA_p.h  DecoderDXVA2_p.h  DecoderMMAL_p.h  DecoderQSV_p.h  DecoderVAAPI_p.h  EncoderQSV_p.h  EncoderVAAPI_p.h  OpenALErrorHandler.h
AVQt/include/AVQt/: AVQt  AVQt.h  global.hpp
AVQt/input/: CommandConsumer.cpp  CommandConsumer.h  DecoderVAAPI.cpp  DecoderVAAPI.h  Demuxer.cpp  Demuxer.h  FileInput.cpp  FileInput.hpp  IAudioSource.h  IFrameSource.h  IInput.hpp  IPacketSource.h
AVQt/input.old/: Demuxer.cpp  Demuxer.h  IAudioSource.h  IFrameSource.h  IPacketSource.h
AVQt/input.old/private/: Demuxer_p.h
AVQt/input/private/: DecoderVAAPI_p.h  Demuxer_p.h  FileInput_p.hpp
AVQt/output/: EncoderVAAPI.cpp  EncoderVAAPI.h  FrameFileSaver.cpp  FrameFileSaver.h  IAudioSink.h  IFrameSink.h  IPacketSink.h  Muxer.cpp  Muxer.cpp.orig  Muxer.h  OpenALAudioOutput.cpp  OpenALAudioOutput.h  OpenGLRenderer.cpp  OpenGLRenderer.cpp.orig  OpenGLRenderer.h  OpenGLWidgetRenderer.cpp  OpenGLWidgetRenderer.h  RenderClock.cpp  RenderClock.h
AVQt/output/private/: EncoderVAAPI_p.h  FrameFileSaver_p.h  Muxer_p.h  Muxer_p.h.orig  OpenALAudioOutput_p.h  OpenALErrorHandler.h  OpenGLRenderer_p.h  OpenGLWidgetRenderer_p.h  RenderClock_p.h
AVQt/renderers/: OpenALAudioOutput.cpp  OpenALAudioOutput.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderer.old.cpp  RenderClock.cpp  RenderClock.h
AVQt/renderers/private/: OpenALAudioOutput_p.h  OpenALErrorHandler.h  OpenGLRenderer_p.cpp  OpenGLRenderer_p.h  OpenGLRenderer_p.old.h  RenderClock_p.h
AVQt/renderers/unix/: OpenGLRenderer.cpp
AVQt/src/: global.cpp
AVQt/src/capture/: DesktopCaptureFactory.cpp  DesktopCapturer.cpp  DummyDesktopCaptureImpl.cpp  DummyDesktopCaptureImpl.hpp  PipeWireDesktopCaptureImpl.cpp  PipeWireDesktopCaptureImpl.hpp  VideoCaptureFactory.cpp  VideoCapturer.cpp
AVQt/src/common/: AudioFormat.cpp  ContainerFormat.cpp  FBOPool.cpp  FBOPool.hpp  PixelFormat.cpp  Platform.cpp
AVQt/src/communication/: AudioPadParams.cpp  FilePadParams.cpp  FrameDestructor.cpp  FrameDestructor.hpp  HWContextSync.cpp  Message.cpp  PacketDestructor.cpp  PacketDestructor.hpp  PacketPadParams.cpp  VideoPadParams.cpp
AVQt/src/debug/: CommandConsumer.cpp
AVQt/src/decoder/: AudioDecoder.cpp  AudioDecoderFactory.cpp  Decoder.cpp  DecoderD3D11VA.cpp  DecoderDXVA2.cpp  DecoderFactory.cpp  DecoderMMAL.cpp  DecoderQSV.cpp  GenericAudioDecoderImpl.cpp  GenericAudioDecoderImpl.hpp  MediaCodecDecoderImpl.cpp  MediaCodecDecoderImpl.hpp  QSVDecoderImpl.cpp  QSVDecoderImpl.hpp  V4L2M2MDecoderImpl.cpp  V4L2M2MDecoderImpl.hpp  VAAPIDecoderImpl.cpp  VAAPIDecoderImpl.hpp  VideoDecoder.cpp  VideoDecoderFactory.cpp
AVQt/src/encoder/: AudioEncoder.cpp  AudioEncoderFactory.cpp  Encoder.cpp  EncoderFactory.cpp  EncoderQSV.cpp  EncoderVAAPI.cpp  GenericAudioEncoderImpl.cpp  GenericAudioEncoderImpl.hpp  IAudioEncoderImpl.cpp  IEncoderImpl.cpp  IVideoEncoderImpl.cpp  VAAPIEncoderImpl.cpp  VAAPIEncoderImpl.hpp  VideoEncoder.cpp  VideoEncoderFactory.cpp
AVQt/src/filter/: VaapiYuvToRgbMapper.cpp
AVQt/src/input/: CommandConsumer.cpp  Demuxer.cpp
AVQt/src/output/: FrameFileSaver.cpp  Muxer.cpp  Muxer.old.cpp
AVQt/src/renderers/: AudioOutput.cpp  AudioOutputFactory.cpp  DRM_OpenGL_RenderMapper.cpp  DRM_OpenGL_RenderMapper.hpp  FallbackFrameMapper.cpp  FallbackFrameMapper.hpp  OpenALAudioOutput.cpp  OpenGLFrameMapperFactory.cpp  OpenGLRenderer.cpp  OpenGLRenderer.old.cpp  OpenGLRendererFactory.cpp  (+12 more)
AVQt/widgets/: OpenGLWidgetRenderer.cpp  OpenGLWidgetRenderer.h
Player/: CMakeLists.txt  FrameSaverAccelerated.cpp  FrameSaverAccelerated.hpp  OpenGlWidgetRenderer.cpp  OpenGlWidgetRenderer.hpp  OpenGlWidgetRendererPrivate.hpp  Player.pro  main.cpp
(+972 files in other folders)
