cmake_minimum_required(VERSION 3.12)
project(LibAVQt)

include(CheckIncludeFileCXX)

set(CMAKE_CXX_STANDARD 20)

if (WIN32)
    if (NOT DEFINED ${OPENAL_INCLUDE_DIR})
        set(OPENAL_INCLUDE_DIR "$ENV{OPENAL_INCLUDE_DIR}")
    endif ()
    if (NOT DEFINED ${OPENAL_LIBRARY})
        set(OPENAL_LIBRARY "$ENV{OPENAL_LIBRARY}")
    endif ()

    if (NOT DEFINED ${FFMPEG_INCLUDE_DIR})
        set(FFMPEG_INCLUDE_DIR "$ENV{FFMPEG_INCLUDE_DIR}")
    endif ()
    if (NOT DEFINED ${FFMPEG_LIBRARY})
        set(FFMPEG_LIBRARY "$ENV{FFMPEG_LIBRARY}")
    endif ()
    include_directories("${OPENAL_INCLUDE_DIR}" "${FFMPEG_INCLUDE_DIR}")
    link_directories("${OPENAL_LIBRARY}" "${FFMPEG_LIBRARY}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
endif ()

CHECK_INCLUDE_FILE_CXX("mfx/mfxvideo.h" MFX_FOUND)
if (NOT MFX_FOUND)
    message("Including submodule")
    include_directories("mfx_dispatch")
endif ()

include_directories("libpgraph_network/libpgraph/include")
include_directories("libpgraph_network/include")
#add_subdirectory(libpgraph_network/libpgraph)
add_subdirectory("libpgraph_network")
if (TARGET pgraph_obj)
    include_directories("libpgraph_network/libpgraph/include")
else ()
    add_subdirectory(libpgraph)
    include_directories("libpgraph/include")
endif ()
set(CMAKE_AUTOMOC on)
set(CMAKE_AUTORCC on)
set(CMAKE_AUTOUIC on)

add_subdirectory(AVQt)
include_directories(AVQt)
add_subdirectory(Player)
